--- a/pulic/home.html
+++ b/pulic/home.html
@@ -69,10 +69,13 @@
                             <textarea type="text" placeholder="Description..." class="form-control" id="description" style="width: 50%" required></textarea>
                         </div>
                         <div class="form-group" style="padding-bottom: 10px">
-                            <input type="file" class="form-control-file" id="imgThumnal" accept="image/jpeg" required>
+                            <input type="file" class="form-control-file" id="imgThumnal" accept="image/jpeg" onchange="checkExtension(this.value,submit)" required>
+                            <div class="invalid-feedback">
+                                Please choose a valid picture
+                            </div>
                         </div>
                         <div class="form-group" style="padding-bottom: 10px">
-                            <img id="selected-img" width="450px" height="250px" src="#">
+                            <img id="selected-img" width="auto" height="auto" src="#">
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control" id="moreInfo" placeholder="More Info..." required>
@@ -90,7 +93,7 @@
                             </div>
                         </div>
                         <div class="form-group text-center">
-                            <button id="save-product" type="submit" style="width: 150px; height: 60px;" class="btn btn-light bg-dark text-light">
+                            <button id="btn_submit" type="submit" style="width: 150px; height: 60px;" class="btn btn-light bg-dark text-light">
                                     Upload Product
                                 </button>
                         </div>
@@ -119,29 +122,37 @@
                     const description = document.getElementById("description");
                     const selected_img = document.getElementById("selected-img");
                     const imgThumnal = document.getElementById("imgThumnal");
+                    const picture = $("#imgThumnal").prop("files")[0];
                     const btn_upload = document.getElementById("save-product");
-                    selected_img.style.display = "none";
+                    selected_img.style.display = "none"
 
                     function previewImage(image) {
-                        const reader = new FileReader();
-                        reader.onload = function(e) {
-                            selected_img.attr('src', e.target.result)
+
+                        if (image.files && image.files[0]){
+                            const reader = new FileReader();
+                            reader.onload = function(e) {
+                                $("#selected-img").attr('src', e.target.result)
+                            }
+                            reader.readAsDataURL(image.files[0]);
                             selected_img.style.display = "block";
                         }
-                        reader.readAsDataURL(image.files[0]);
-                        imgThumnal.onchange(function() {
-                            previewImage(this);
-                        });
-                        btn_upload.onclick = function (){
-                            $("description").removeClass("is-invalid");
-                            $("imgThumnal").removeClass("is-invalid");
+                    }
+                    $("#imgThumnal").change(function (){
+                        previewImage(this);
+                    })
 
-                            const desc = description.value;
-                            const img = imgThumnal.value;
-                        };
+                    btn_upload.onclick = function (){
+                        $("description").removeClass("is-invalid");
+                        $("imgThumnal").removeClass("is-invalid");
+
+                        const desc = description.value;
+                        const img = imgThumnal.value;
+                    };
+                    if(picture == null){
+                        $("#imgThumnal").addClass("is-invalid");
                     }
                 </script>
-            </div>
+                </div>
             </div>
         </div>
     
@@ -171,11 +182,10 @@
         }
         firebase.auth().onAuthStateChanged(function (user) {
             if (!user) {
-                window.location.href = "login";
+                window.location.href = "login.html";
             }
         });
     </script>
-    <script src="js/index.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
