--- a/pulic/home.html
+++ b/pulic/home.html
@@ -182,7 +182,7 @@
         }
         firebase.auth().onAuthStateChanged(function (user) {
             if (!user) {
-                window.location.href = "login.html";
+                window.location.href = "login";
             }
         });
     </script>
